--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
-</head>
-<body>
-    <h1>Welcome to Your GitHub Pages Site!</h1>
-    <p>This is your first website using GitHub Pages. You can start editing this content and customize it as you like.</p>
-</body>
+<html>
+  <head>
+    <title>Welcome to My Site</title>
+  </head>
+  <body>
+    <h1>Hello, I’m Sammy!</h1>
+    <p>This is my first website using GitHub Pages. Thanks for visiting!</p>
+  </body>
 </html>
